@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST amd-ucode-2011-01-11.tar 30720 RMD160 2efef269441d3232005700d966ab0abfbcbddfb7 SHA1 942b1ff9802aeec8ee9d28c0ece459648442fc8d SHA256 60c42629f3c91f97a350bc6a3ad0a256f7b794bfab1f143d7f1924a70728f4ec
+DIST amd-ucode-2012-01-17.tar 61440 RMD160 321c2bcaae4d4ca62c29aee0dd9a08885f745825 SHA1 8de27738d8da1969182935b461c7f06787a36582 SHA256 87589ad8e61532c2e0f7f418cd452aec9188964dce2f460eba66c379905e1657
 EBUILD amd-ucode-2011.01.11.ebuild 2332 RMD160 a2e7b6e05a8e9e44f05ee1e804ff8e8720b11d0b SHA1 77486e3234af69416926f985f7ad0f61cc7003fd SHA256 951723059419027b3aa4a1ddb564a07ab4b0b84e0318e0ddd785d7eadadfe5fb
-MISC ChangeLog 755 RMD160 9f644eb5de49c320f10dd401e41e0ff5c41c15cd SHA1 ab2ae11873eb85a2406e2e0c3f7d23abc6331be1 SHA256 919486d4fddfb6b3fa984d1693f010e4b13c5e1897ba884edc5bb32246be596c
+EBUILD amd-ucode-2012.01.17.ebuild 2390 RMD160 5b042bd278f086e7ec40ce3e286144ecd8f95fd2 SHA1 7332843ca5e354caf85d925fcb6f872d4972856c SHA256 e1367be7e89554defefea0b02931defcfc9c6426a674e636a9793c941d5b347a
+MISC ChangeLog 897 RMD160 d5a3e1be0910c32a0323dd2db6d90c6e2e7c2153 SHA1 5a5be80d5facf432b1c04dfb952501e4dc8e66ee SHA256 b4999fd0525651741b773fcc54b5a1104843b99c10cedfe15f002f75e208ef4e
 MISC metadata.xml 231 RMD160 a4ee7537ad7b05b1bd32fd5f8610112c2c2fd9b0 SHA1 eccb7834cf66db8a5228a168bfaecdbe4c106ecd SHA256 daa39ab9583fa1c70ca766198963a1d29a58d4a9b3e188001de75b57103b8d44
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk04fBoACgkQAiZjviIA2XhPAQCg0CBwu5FxQHFpqgzJj+pIDPzE
-v8QAn1wmh4WJ7WELLp0Xnpr5yyootpEN
-=FzIc
+iEYEARECAAYFAk8Vw8cACgkQAiZjviIA2Xh8+gCgwn6NqvX+p0VA+7WjIkpsF6cZ
+3k8AoIvF3sd4fGB9lCGbuFL03Ao7/6bs
+=5IPM
 -----END PGP SIGNATURE-----
