@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/amd-ucode
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/amd-ucode/ChangeLog,v 1.3 2011/01/20 18:16:28 flameeyes Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/amd-ucode/ChangeLog,v 1.4 2012/01/17 18:54:13 flameeyes Exp $
+
+*amd-ucode-2012.01.17 (17 Jan 2012)
+
+  17 Jan 2012; Diego E. Pettenò <flameeyes@gentoo.org>
+  +amd-ucode-2012.01.17.ebuild:
+  Version bump.
 
   20 Jan 2011; Diego E. Pettenò <flameeyes@gentoo.org>
   amd-ucode-2011.01.11.ebuild:
